--- a/client/src/app/+customer/portal/portal.component.html
+++ b/client/src/app/+customer/portal/portal.component.html
@@ -20,7 +20,7 @@
             <p class="m0 text-muted">
               <small>地址 -- {{m.address}}</small>
             </p>
-            <button type="button" class="btn btn-warning btn-sm" (click)="cancelConcern($event,m)">取消关注</button>
+            <button type="button" class="btn btn-warning btn-sm cancel-care" (click)="cancelConcern($event,m)">取消关注商户</button>
           </div>
         </div>
       </div>
