--- a/client/src/app/+customer/cart/cart-bill.component.html
+++ b/client/src/app/+customer/cart/cart-bill.component.html
@@ -56,10 +56,14 @@
             <form class="good-ack-form" [formGroup]="form" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label class="col-sm-2 form-control-label">取货时间</label>
-                    <div class="form-group text-danger" *ngIf="nextDay">
-                        <span class="col-xs-12 form-control-label order-error">购买时间超过商家当天营业时间,将自动排期到第二天相同时间段</span>
+                    <div class="col-sm-10 text-danger" *ngIf="nextDay">
+                        <md-checkbox (change)="selectNextDay = !selectNextDay">
+                            当天营业时间已结束,选择第二天时间段
+                        </md-checkbox>                        
                     </div>
-                    <div class="col-sm-10">
+                </div>
+                <div class="form-group">                    
+                    <div class="col-sm-10" *ngIf="!nextDay || (nextDay && selectNextDay)">
                         <md-radio-group formControlName="takeTimeRange">
                             <md-radio-button *ngFor="let ctt of cartTakeTime" [value]="ctt">
                                 {{ctt.desc}}
@@ -71,7 +75,7 @@
                     <span class="col-xs-12 form-control-label order-error">{{orderResult.error}}</span>
                 </div>
 
-                <button md-raised-button color="warn" [disabled]="cartTakeTime.length === 0 || !form.valid">提交订单</button>
+                <button md-raised-button color="warn" [disabled]="cartTakeTime.length === 0 || !form.valid || (nextDay && !selectNextDay)">提交订单</button>
             </form>
 
         </section>
