--- a/client/src/app/+customer/category/category.component.html
+++ b/client/src/app/+customer/category/category.component.html
@@ -18,7 +18,7 @@
                             <div class="body-container">
                                 <p class="m0">{{p.name}}</p>
                                 <p class="m0 text-muted">
-                                    <small>单价：</small><small class="green">￥<small class="bold">{{p.unitPrice}}</small></small>
+                                    <small>单价：</small><small class="green">￥{{p.unitPrice}}</small>
                                 </p>
                             </div>
                         </div>
