--- a/client/src/app/+customer/portal/portal.component.html
+++ b/client/src/app/+customer/portal/portal.component.html
@@ -1,8 +1,13 @@
 <div class="portal-container">
   <div class="table-btns">
-    <button md-mini-fab color="myprimary" (click)="addMerchant($event)">
+    <div class="btn-group">
+      <button md-mini-fab color="myprimary" (click)="addMerchant($event)">
                  <md-icon fontSet="fa" fontIcon="fa-search"></md-icon>
               </button>
+      <button md-mini-fab color="myprimary" (click)="scanBarCode($event)">
+                 <md-icon fontSet="fa" fontIcon="fa-barcode"></md-icon>
+              </button>
+    </div>
   </div>
   <div *ngFor="let m of merchants" class="list-group">
     <a class="list-group-item" (click)="goToMerchant(m)">
@@ -10,7 +15,7 @@
         <div class="pull-left img-container">
           <img *ngIf="m.imageSource" [src]="imagePreUrl+m.imageSource+'-sm'" style="width:60px; height:60px;">
           <img *ngIf="!m.imageSource" src="assets/img/merchant-sm.png" style="width:60px; height:60px;">
-        </div>        
+        </div>
         <div class="media-box-body clearfix">
           <div class="body-container">
             <p class="m0">{{m.shortName}}</p>
