--- a/client/src/app/+merchant/modifyqrcode/modify-qrcode.component.html
+++ b/client/src/app/+merchant/modifyqrcode/modify-qrcode.component.html
@@ -1,9 +1,9 @@
-<div class="modifyticket-container">
+<div class="modifyqrcode-container">
     <div class="card text-xs-center">
-        <img *ngIf="merchant.wxTicket" class="card-img-top" [src]="ticketUrl">
-        <div class="card-block" *ngIf="merchant.wxTicket">
+        <img *ngIf="merchant.qrCode" class="card-img-top" [src]="qrCodeUrl">
+        <div class="card-block" *ngIf="merchant.qrCode">
             <h4 class="card-title">二维码地址</h4>
-            <p class="card-text ticket-url">{{ticketUrl}}</p>
+            <p class="card-text qrcode-url">{{qrCodeUrl}}</p>
         </div>
         <div class="card-block">
             <button md-raised-button color="warn" (click)="createTicket($event)">生成商家二维码</button>
