--- a/client/src/app/+merchant/my/my.component.html
+++ b/client/src/app/+merchant/my/my.component.html
@@ -65,7 +65,7 @@
             <a [routerLink]="['/merchant/hiscart']"><i class="fa fa-cart-plus ui-menu-color06"></i><span>历史订单</span></a>
         </li>
         <li class="col-xs-4 col-sm-2 menuitem">
-            <a [routerLink]="['/merchant/modifyticket']"><i class="fa fa-barcode ui-menu-color02"></i><span>生成二维码</span></a>
+            <a [routerLink]="['/merchant/modifyQrCode']"><i class="fa fa-barcode ui-menu-color02"></i><span>生成二维码</span></a>
         </li>
     </ul>
 </div>
